<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微洋洋收银</string>
    <string name="copy_right">© 2007-2016 千视(中国)科技有限公司 </string>
    <string name="action_settings">Settings</string>
    <string name="text_main_ui_my">我的</string>
    <string name="text_main_ui_pay">付款</string>
    <string name="text_main_ui_pro_manage">商城</string>
    <string name="text_net_error">当前网络不可用，请设置好网络后再试！</string>
    <string name="text_order">订单</string>
    <string name="no_any_market">在您的手机上没有找到任何应用市场或者手机助手</string>
    <string name="username_or_password_empty">用户名和密码不能为空</string>
    <string name="username_is_error">您输入的手机号不正确，请重新输入</string>
    <string name="new_version_checking">正在检查新版本</string>
    <string name="apk_downloading">新版安装包正在下载</string>
    <string name="no_new_version">已经是最新版本</string>
    <string name="apk_new_version">最新版本：%s</string>
    <string name="new_apk_size">安装包大小：%s</string>
    <string name="not_wifi_for_version">没有wifi连接，默认只在wifi下更新</string>
    <string name="timeout">检查新版本超时，请稍后再试</string>
    <string name="ignore_apk_version">忽略该版本</string>
    <string name="quick_update_apk">立即更新</string>
    <string name="quick_install_apk">立即安装</string>
    <string name="have_new_apk_version">有新版本啦</string>
    <string name="net_error">没有可用的网络连接，请设置网络后重试</string>
    <string name="new_apk_downloaded_tips">最新版本已下载，是否安装？</string>
    <string name="next_update_apk">以后再说</string>
    <string name="passwd_is_error">您输入的密码不正确，请输入6-18位字母与数字组合</string>
    <!-- Feedback Activity -->
    <string name="feedback_content_hint">在这里写下您的宝贵意见</string>
    <string name="feedback_contact_message">邮箱或手机号码</string>
    <string name="submit">提交反馈</string>
    <string name="feedback">反馈</string>
    <string name="text_dialog_ok">确定</string>
    <string name="text_dialog_cancle">取消</string>
    <string name="contact_title">您的联系方式</string>
    <string name="content_title">您的意见</string>
    <string name="feedback_content_empty">反馈意见不能为空</string>
    <string name="feedback_contact_empty">联系方式不能为空</string>
    <string name="feedback_submit_suc">反馈提交成功，感谢您的宝贵意见！</string>
    <string name="feedback_submit_fail">反馈提交失败，请稍后重试！</string>

    <!-- 下拉刷新，上拉加载更多 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="text_update_category_name_succ">修改分类名称成功</string>
    <string name="text_add_category_name_succ">新增分类名称成功</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="text_pay_scan_tips">请顾客出示付款码\n\r将顾客的付款码放入扫描框内</string>
    <string name="text_barcode_scan_tips">请将商品条码\n\r放入扫描框内</string>
    <string name="text_to_jiao">四舍五入到 "角"</string>
</resources>
